--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+click = "^8.1.5"
+rich = "^13.4.2"
+toml = "^0.10.2"
 
+
+[tool.poetry.scripts]
+"cm" = "cm.main:cli"
 
 [build-system]
 requires = ["poetry-core"]
