--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 click = "^8.1.5"
 rich = "^13.4.2"
 toml = "^0.10.2"
+typer = "^0.9.0"
+trogon = "^0.5.0"
 
 
 [tool.poetry.scripts]
