--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-click = "^8.1.5"
 rich = "^13.4.2"
-toml = "^0.10.2"
-typer = "^0.9.0"
-trogon = "^0.5.0"
+typer = {extras = ["all"], version = "^0.9.0"}
 
 
 [tool.poetry.scripts]
-"cm" = "cm.main:cli"
+"binary" = "cli.main:main"
 
 [build-system]
 requires = ["poetry-core"]
