--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "cli"
-version = "0.1.0"
+name = "binary"
+version = "0.1.1"
 description = ""
 authors = ["Josh cmd-line <joshua.stoneham@gmail.com>"]
 readme = "README.md"
@@ -12,7 +12,7 @@ typer = {extras = ["all"], version = "^0.9.0"}
 
 
 [tool.poetry.scripts]
-"binary" = "cli.main:main"
+"binary" = "binary.main:main"
 
 [build-system]
 requires = ["poetry-core"]
